gcc/testsuite/g++.dg/cpp0x/pr85437-2.C
@@ -1,0 +1,7 @@
+// { dg-do compile { target c++11 } }
+
+struct A { };
+struct B : A { int x; };
+
+constexpr int A::*abx
+= reinterpret_cast<int(A::*)>(&B::x); // { dg-error "reinterpret.*constant" }
